// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accommodationSummary accommodationCell and accommodationCard macros for current accommodation returns a context card object for a CAS2 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-02-03",
  "name": "CAS2 accommodation of 13 weeks or more",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2025-12-01",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for current accommodation returns a context card object for a CAS3 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-07-31",
  "name": "CAS3",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2025-12-01",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for current accommodation returns a context card object for a No type accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-05-23",
  "name": "Unknown",
  "settledTag": undefined,
  "startDate": "2025-12-01",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Private address accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-09-10",
  "name": "Living in the home of a friend, family member or partner: settled",
  "settledTag": {
    "colour": "green",
    "text": "Settled",
  },
  "startDate": "2025-12-01",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Undefined accommodation 1`] = `undefined`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for next accommodation returns a context card object for a CAS2 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "name": "CAS2 accommodation of 13 weeks or more",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2026-02-03",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for next accommodation returns a context card object for a CAS3 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "name": "CAS3",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2026-07-31",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for next accommodation returns a context card object for a No type accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "name": "Unknown",
  "settledTag": undefined,
  "startDate": "2026-05-23",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Private address accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "name": "Living in the home of a friend, family member or partner: settled",
  "settledTag": {
    "colour": "green",
    "text": "Settled",
  },
  "startDate": "2026-09-10",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Undefined accommodation 1`] = `undefined`;
